Change log for hexer, the multi-view binary editor

0.2.2	not yet ;)

0.2.1	2015/12/10
	- fix some more typographical errors
	- abort on memory allocation failures (malloc(), realloc(),
	  strdup())

0.2.0	2015/12/09
	- fix a lot of C compiler warnings
	- provide a better vasprintf() simulation to fix a display bug
	- use sigemptyset() instead of a direct assignment to sigset_t
	  (reported by Daniel Schepler <dschepler@gmail.com>)
	- remove some unused functions
	- simplify exh_save_buffer(): it's only used on the whole file
	- declare some functions as printf-like
	- handle short reads/writes and read/write errors
	- bump the year on my copyright notice
	- fix a signed/unsigned char bug when reading the swapfile
	- merge early when marking screen lines for refreshing
	  (reported by Jonathan Neuschäfer <j.neuschaefer@gmx.net>)
	- let the editor use the HE_DEFAULT_PAGER value from defs.h as
	  a last-resort fallback (nothing in the environment, etc)
	  (reported by Jakub Wilk <jwilk@debian.org>)
	- allow the default pager value to be overridden at build time
	  (reported by Jakub Wilk <jwilk@debian.org>)

0.1.8	2014/09/11
	- fix a crash when inserting or replacing a half-byte
	  Thanks, Thibaut Girka <thib@sitedethib.com>
	- use CPPFLAGS and LDFLAGS as appropriate during the build
	- create the destination directories during the installation
	- bump the year of my copyright notice on files changed in 2014

0.1.7	2011/07/13
	- fix searching for characters with a code point above 127
	  Reported by: Michael Gold <mgold@ncf.ca> in Debian bug #633508
	- bump the year of my copyright notice on files changed in 2011

0.1.6	2010/12/29
	- fix some errors and warnings detected by cppcheck:
	  - bin2c.c, buffer.c, commands.c, hexer.c - file descriptor leaks
	  - calc.c - a buffer overflow with an overlong command line
	  - main.c - suppress a false positive about a global pointer
	  - regex.c - note that I've been aware of the negative array index