@@ -1,6 +1,8 @@
 Change log for hexer, the multi-view binary editor
 
 0.2.2	not yet ;)
+	- reset the terminal color attributes on exit
+	  (reported by Jakub Wilk <jwilk@debian.org>)
 
 0.2.1	2015/12/10
 	- fix some more typographical errors
